--- a/core/gsb-api/Cargo.toml
+++ b/core/gsb-api/Cargo.toml
@@ -26,7 +26,7 @@ thiserror = "1"
 uuid = { version = "1.2.2", features = ["v4"] }
 futures = "0.3"
 base64 = "0"
-flexbuffers = "2"
+flexbuffers = { git = "https://github.com/pwalski/flatbuffers", branch="public_address" }
 bytes = "1"
 tokio = "1"
 async-trait = "0.1"
