--- a/.github/workflows/integration-test-hybrid-net.yml
+++ b/.github/workflows/integration-test-hybrid-net.yml
@@ -26,7 +26,7 @@ jobs:
 
   integration-test:
     name: Integration Tests (hybrid-net)
-    runs-on: goth
+    runs-on: [goth, ubuntu-18.04]
     needs: test_check
     defaults:
       run:
