--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -30,7 +30,7 @@ jobs:
 
   integration-test:
     name: Integration Tests
-    runs-on: goth
+    runs-on: [goth, ubuntu-18.04]
     needs: test_check
     defaults:
       run:
