--- a/core/gsb-api/Cargo.toml
+++ b/core/gsb-api/Cargo.toml
@@ -11,7 +11,6 @@ ya-service-api = "0.1"
 ya-service-api-interfaces = "0.2"
 ya-service-api-web = "0.2"
 ya-service-bus = "0.6"
-ya-core-model = { version = "0.8", features = ["gftp"] }
 
 actix = "0"
 actix-web = "4"
@@ -29,4 +28,6 @@ base64 = "0"
 flexbuffers = "2"
 bytes = "1"
 tokio = "1"
-async-trait = "0.1"
+
+[dev-dependencies]
+ya-core-model = { version = "0.8", features = ["gftp"] }
