Removed all changes

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -10,4 +10,9 @@ rustflags = ["-C", "target-feature=+crt-static"]
 name = "Golem Factory"
 email = "contact@golem.network"
 
+[profile.release]
+lto="fat"
+opt-level=3
+codegen-units=1
+
 
