--- a/core/net/Cargo.toml
+++ b/core/net/Cargo.toml
@@ -9,14 +9,18 @@ default = []
 service = []
 # Temporary to make goth integration tests work
 central-net = []
+packet-trace-enable = [
+    "ya-packet-trace/enable",
+    "ya-relay-client/packet-trace-enable"
+]
 
 [dependencies]
 ya-client-model = "0.5"
 ya-core-model = { version = "^0.8", features=["net", "identity"] }
 
-ya-relay-client = "0.5"
+#ya-relay-client = "0.5"
 #ya-relay-client = { path = "../../../ya-relay/client" }
-#ya-relay-client = { git = "https://github.com/golemfactory/ya-relay.git", rev = "f1009ec013d27795a56c6493447836a851352b72" }
+ya-relay-client = { git = "https://github.com/golemfactory/ya-relay.git", rev = "20a81b1014c0c921159b59d9abb5bde7e4709cab" }
 
 ya-sb-proto = { version = "0.6.1" }
 ya-sb-util = { version = "0.4.1" }
@@ -24,6 +28,7 @@ ya-service-api = "0.1"
 ya-service-api-interfaces = "0.2"
 ya-service-bus = "0.6.1"
 ya-utils-networking = "0.2"
+ya-packet-trace = { git = "https://github.com/golemfactory/ya-packet-trace" }
 
 actix = "0.13"
 actix-web = "4"
