--- a/Cargo.toml
+++ b/Cargo.toml
@@ -258,6 +258,10 @@ ya-sb-util = { git = "https://github.com/golemfactory/ya-service-bus.git", rev =
 #ya-client = { git = "https://github.com/golemfactory/ya-client.git", rev = "2a6350f62cf8d926721225a3451822731456e3fe" }
 #ya-client-model = { git = "https://github.com/golemfactory/ya-client.git", rev = "2a6350f62cf8d926721225a3451822731456e3fe" }
 
+## RELAY and networking stack
+ya-relay-stack = { git = "https://github.com/golemfactory/ya-relay.git", rev = "ba64e5c431989b5e837b995485d3ae9da02e828b" }
+ya-relay-client = { git = "https://github.com/golemfactory/ya-relay.git", rev = "ba64e5c431989b5e837b995485d3ae9da02e828b" }
+
 ## OTHERS
 gftp = { path = "core/gftp" }
 tokio-process-ns = { path = "exe-unit/tokio-process-ns" }
