--- a/utils/networking/Cargo.toml
+++ b/utils/networking/Cargo.toml
@@ -15,7 +15,8 @@ lazy_static = "1.4"
 log = "0.4"
 regex = "1"
 
-ya-relay-stack = { version = "0.4.1", optional = true }
+#ya-relay-stack = { version = "0.4.1", optional = true }
+ya-relay-stack = { git = "https://github.com/golemfactory/ya-relay.git", rev = "ba64e5c431989b5e837b995485d3ae9da02e828b", optional = true }
 
 anyhow = { version = "1.0", optional = true }
 trust-dns-resolver = { version = "0.21", optional = true }
