--- a/Cargo.toml
+++ b/Cargo.toml
@@ -243,6 +243,13 @@ ya-service-api-web = { path = "core/serv-api/web" }
 #ya-client = { git = "https://github.com/golemfactory/ya-client.git", rev = "2a6350f62cf8d926721225a3451822731456e3fe" }
 #ya-client-model = { git = "https://github.com/golemfactory/ya-client.git", rev = "2a6350f62cf8d926721225a3451822731456e3fe" }
 
+## RELAY and networking stack
+#ya-relay-stack = { git = "https://github.com/golemfactory/ya-relay.git", rev = "3ca135218f0ae5d62f7ac5c6afad0120f652ecec" }
+#ya-relay-client = { git = "https://github.com/golemfactory/ya-relay.git", rev = "3ca135218f0ae5d62f7ac5c6afad0120f652ecec" }
+
+ya-relay-stack = { path = "../ya-relay/crates/stack" }
+ya-relay-client = { path = "../ya-relay/client" }
+
 ## OTHERS
 gftp = { path = "core/gftp" }
 tokio-process-ns = { path = "exe-unit/tokio-process-ns" }
