--- a/utils/agreement-utils/Cargo.toml
+++ b/utils/agreement-utils/Cargo.toml
@@ -15,10 +15,11 @@ default = []
 [dependencies]
 ya-client-model = "0.5"
 
+chrono = "0.4"
 regex = "1.5.4"
 serde = "1.0"
 serde_json = "1.0"
-serde_yaml = "0.8.11"
+serde_yaml = "0.9"
 thiserror = "1.0.10"
 
 [dev-dependencies]
