--- a/agent/provider/Cargo.toml
+++ b/agent/provider/Cargo.toml
@@ -42,6 +42,7 @@ futures = "0.3"
 futures-util = "0.3.4"
 hex = "0.4"
 humantime = "2.0.0"
+itertools = "0.10"
 lazy_static = "1.4.0"
 libc = "0.2"
 log = "0.4"
