--- a/.github/workflows/integration-test-nightly.yml
+++ b/.github/workflows/integration-test-nightly.yml
@@ -56,12 +56,12 @@ jobs:
       - name: Configure Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.10.0'
+          python-version: "3.11.2"
 
       - name: Configure Poetry
         uses: Gr1N/setup-poetry@v7
         with:
-          poetry-version: 1.2.2
+          poetry-version: 1.3.2
 
       - name: Install dependencies
         run: poetry install --no-root
@@ -116,7 +116,7 @@ jobs:
         # Python version below should agree with the version set up by this job.
         # In the future we'll be able to use the `--all` flag here to remove envs for
         # all Python versions (https://github.com/python-poetry/poetry/issues/3208).
-        run: poetry env remove python3.10
+        run: poetry env remove python3.11
 
       - name: Send Discord notification on failure
         uses: Ilshidur/action-discord@0.3.2
