--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ dummy-driver = ['ya-dummy-driver']
 erc20-driver = ['ya-erc20-driver']
 zksync-driver = ['ya-zksync-driver']
 tos = []
+framework-test = []
 # Temporary to make goth integration tests work
 central-net = ['ya-net/central-net']
 packet-trace-enable = [
@@ -84,6 +85,9 @@ tokio = { version = "1", features = ["net"] }
 tokio-util = { version = "0.7", features = ["codec"] }
 tokio-stream = { version = "0.1.8", features = ["io-util"] }
 url = "2.1.1"
+
+[dev-dependencies]
+ya-test-framework = "0.1"
 
 [package.metadata.deb]
 name = "golem-requestor"
@@ -208,6 +212,8 @@ members = [
     "utils/diesel-utils",
     "utils/fd-metrics",
     "core/metrics",
+    "test-utils/test-framework",
+    "test-utils/test-framework/framework-macro"
 ]
 
 [patch.crates-io]
@@ -271,6 +277,8 @@ ya-provider = { path = "agent/provider" }
 
 ## TEST UTILS
 ya-manifest-test-utils = { path = "utils/manifest-utils/test-utils" }
+ya-test-framework = { path = "test-utils/test-framework" }
+ya-framework-macro = { path = "test-utils/test-framework/framework-macro" }
 
 ethereum-tx-sign = { git = "https://github.com/mfranciszkiewicz/ethereum-tx-sign.git", rev = "1164c74187a9e2947faeaea7dde104c3cdec4195" }
 graphene-sgx = { git = " https://github.com/golemfactory/graphene-rust.git", rev = "dbd993ebad7f9190410ea390a589348479af6407" }
