--- a/core/gsb-api/Cargo.toml
+++ b/core/gsb-api/Cargo.toml
@@ -31,9 +31,11 @@ bytes = "1"
 tokio = "1"
 
 [dev-dependencies]
+ya-core-model = { version = "0.8", features = ["gftp"] }
+
 actix-test = "0.1"
 awc = "3"
-env_logger = "0.10"
 ctor = "0.1"
-ya-core-model = { version = "0.8", features = ["gftp"] }
-test-case = "2"
+env_logger = "0.10"
+serial_test = "1.0.0"
+test-case = "3"
