--- a/agent/provider/Cargo.toml
+++ b/agent/provider/Cargo.toml
@@ -25,6 +25,7 @@ ya-utils-cli = "0.1"
 ya-utils-path = "0.1"
 ya-utils-process = { version = "0.2", features = ['lock'] }
 ya-std-utils = "0.1"
+golem-certificate = { git = "https://github.com/golemfactory/golem-certificate", rev = "e7156215a615562edc95f81b3dbd1f018bee56a8" }
 
 actix = { version = "0.13", default-features = false }
 actix-rt = "2.7"
