--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ path = "core/serv/src/main.rs"
 
 [workspace.dependencies]
 libsqlite3-sys = { version = "=0.22.2", features = ["bundled"] }
+erc20_payment_lib = { version = "0.1.2" }
 
 [dependencies]
 ya-activity = "0.4"
