--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,11 @@ license = "GPL-3.0"
 edition = "2018"
 
 [features]
-default = ['erc20-driver', 'zksync-driver', 'gftp/bin']
+default = ['erc20-driver', 'erc20next-driver', 'zksync-driver', 'gftp/bin']
 static-openssl = ["openssl/vendored", "openssl-probe"]
 dummy-driver = ['ya-dummy-driver']
 erc20-driver = ['ya-erc20-driver']
+erc20next-driver = ['ya-erc20next-driver']
 zksync-driver = ['ya-zksync-driver']
 tos = []
 framework-test = []
@@ -45,6 +46,7 @@ ya-dummy-driver = { version = "0.3", optional = true }
 ya-file-logging = "0.1"
 ya-gsb-api = "0.1"
 ya-erc20-driver = { version = "0.4", optional = true }
+ya-erc20next-driver = { version = "0.4", optional = true }
 ya-zksync-driver = { version = "0.3", optional = true }
 ya-identity = "0.3"
 ya-market = "0.4"
@@ -193,6 +195,7 @@ members = [
     "core/payment-driver/base",
     "core/payment-driver/dummy",
     "core/payment-driver/erc20",
+    "core/payment-driver/erc20next",
     "core/payment-driver/zksync",
     "core/persistence",
     "core/serv-api",
@@ -239,6 +242,7 @@ ya-payment = { path = "core/payment" }
 ya-payment-driver = { path = "core/payment-driver/base" }
 ya-dummy-driver = { path = "core/payment-driver/dummy" }
 ya-erc20-driver = { path = "core/payment-driver/erc20" }
+ya-erc20next-driver = { path = "core/payment-driver/erc20next" }
 ya-zksync-driver = { path = "core/payment-driver/zksync" }
 ya-version = { path = "core/version" }
 ya-vpn = { path = "core/vpn" }
