--- a/core/payment/Cargo.toml
+++ b/core/payment/Cargo.toml
@@ -50,6 +50,7 @@ erc20_payment_lib = { workspace = true }
 ya-client = "0.7"
 ya-dummy-driver = "0.3"
 ya-erc20-driver = "0.4"
+ya-erc20next-driver = "0.4"
 ya-zksync-driver = "0.3"
 ya-net = { version = "0.3", features = ["service"] }
 ya-sb-router = "0.6.1"
