--- a/.github/workflows/binaries-aarch64.yml
+++ b/.github/workflows/binaries-aarch64.yml
@@ -1,9 +1,10 @@
 name: Build binaries (aarch64)
 
 on:
-  push:
+  pull_request:
     branches:
-      - goth-new-version
+      - master
+      - release/*
 
 jobs:
   build:
@@ -13,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
 
       - name: Setup toolchain
         uses: actions-rs/toolchain@v1
@@ -44,7 +45,7 @@ jobs:
           cp target/aarch64-unknown-linux-musl/release/{yagna,ya-provider,exe-unit,golemsp,gftp} build
 
       - name: Upload binaries
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v1
         with:
           name: Yagna linux-aarch64
           path: build
