--- a/.github/workflows/integration-test-hybrid-net.yml
+++ b/.github/workflows/integration-test-hybrid-net.yml
@@ -1,9 +1,10 @@
 name: Goth integration tests (hybrid-net)
 
 on:
-  push:
+  pull_request:
     branches:
-      - goth-new-version
+      - master
+      - release/*
 
 jobs:
   test_check:
@@ -33,19 +34,19 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
         with:
           ref: ${{ github.event.pull_request.head.sha || github.sha }}
 
       - name: Configure Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v2
         with:
           python-version: "3.10.7"
 
       - name: Configure Poetry
-        uses: Gr1N/setup-poetry@v8
+        uses: Gr1N/setup-poetry@v7
         with:
-          poetry-version: 1.3.2
+          poetry-version: 1.2.2
           working-directory: "./goth_tests"
 
       - name: Install dependencies
@@ -87,7 +88,7 @@ jobs:
           poetry run poe goth-tests --config-override docker-compose.build-environment.binary-path=/tmp/yagna-build --config-override docker-compose.compose-file=docker-compose-hybrid-net.yml
 
       - name: Upload test logs
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v2
         if: always()
         with:
           name: goth-logs
