--- a/.github/workflows/unit-test-sgx.yml
+++ b/.github/workflows/unit-test-sgx.yml
@@ -1,7 +1,7 @@
 name: SGX Unit Tests
 
 on:
-  push:
+  pull_request:
     branches:
       - master
       - release/*
@@ -23,7 +23,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v1
 
       - name: Install Rust ${{ env.rust_stable }}
         uses: actions-rs/toolchain@v1
