--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -1,9 +1,10 @@
 name: Unit Tests
 
 on:
-  push:
+  pull_request:
     branches:
-      - goth-new-version
+      - master
+      - release/*
 
 env:
   rust_stable: 1.64.0
@@ -22,7 +23,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v1
 
       - name: Install Rust ${{ env.rust_stable }}
         uses: actions-rs/toolchain@v1
