--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -1,10 +1,10 @@
 name: Goth integration tests
 
 on:
-  pull_request:
+  push:
     branches:
-      - master
-      - release/*
+      - goth-new-version
+      
 
 jobs:
   test_check:
