--- a/.github/workflows/market-test-suite.yml
+++ b/.github/workflows/market-test-suite.yml
@@ -1,11 +1,9 @@
 name: Market Test Suite
 
 on:
-  pull_request:
+  push:
     branches:
-      - master
-      - release/*
-
+      - goth-new-version
 env:
   rust_stable: 1.64.0
 
