--- a/.github/workflows/binaries-x86-64.yml
+++ b/.github/workflows/binaries-x86-64.yml
@@ -1,10 +1,10 @@
 name: Build binaries (x86-64)
 
 on:
-  pull_request:
+  push:
     branches:
-      - master
-      - release/*
+      - goth-new-version
+  
 
 env:
   rust_stable: 1.64.0
