new python old system

--- a/.github/workflows/binaries-x86-64-hybrid-net.yml
+++ b/.github/workflows/binaries-x86-64-hybrid-net.yml
@@ -1,10 +1,10 @@
 name: Build binaries (x86-64) hybrid-net
 
 on:
-  pull_request:
+  push:
     branches:
-      - master
-      - release/*
+      - Goth-new
+      
 
 env:
   rust_stable: 1.64.0
