--- a/.github/workflows/unit-test-sgx.yml
+++ b/.github/workflows/unit-test-sgx.yml
@@ -1,11 +1,9 @@
 name: SGX Unit Tests
 
 on:
-  pull_request:
+  push:
     branches:
-      - master
-      - release/*
-      - sgx/*
+      - Goth-new
 
 env:
   rust_stable: 1.64.0
