--- a/.github/workflows/binaries-aarch64.yml
+++ b/.github/workflows/binaries-aarch64.yml
@@ -1,10 +1,9 @@
 name: Build binaries (aarch64)
 
 on:
-  pull_request:
+  push:
     branches:
-      - master
-      - release/*
+      - Goth-new
 
 jobs:
   build:
