--- a/.github/workflows/system-test.yml
+++ b/.github/workflows/system-test.yml
@@ -1,10 +1,9 @@
 name: System Tests
 
 on:
-  pull_request:
+  push:
     branches:
-      - master
-      - release/*
+      - Goth-new
 
 env:
   rust_stable: 1.64.0
