--- a/core/net/Cargo.toml
+++ b/core/net/Cargo.toml
@@ -9,14 +9,18 @@ default = []
 service = []
 # Temporary to make goth integration tests work
 central-net = []
+packet-trace-enable = [
+    "ya-packet-trace/enable",
+    "ya-relay-client/packet-trace-enable"
+]
 
 [dependencies]
 ya-client-model = "0.5"
 ya-core-model = { version = "^0.8", features=["net", "identity"] }
 
-ya-relay-client = "0.5"
+#ya-relay-client = "0.5"
 #ya-relay-client = { path = "../../../ya-relay/client" }
-#ya-relay-client = { git = "https://github.com/golemfactory/ya-relay.git", rev = "f1009ec013d27795a56c6493447836a851352b72" }
+ya-relay-client = { git = "https://github.com/golemfactory/ya-relay.git", rev = "f9371b572204365920bbe1f6cc9b3e757bf12887" }
 
 ya-sb-proto = { version = "0.6.1" }
 ya-sb-util = { version = "0.4.1" }
