--- a/.github/workflows/unit-test-sgx.yml
+++ b/.github/workflows/unit-test-sgx.yml
@@ -3,7 +3,9 @@ name: SGX Unit Tests
 on:
   push:
     branches:
-      - goth-new-version
+      - master
+      - release/*
+      - sgx/*
 
 env:
   rust_stable: 1.64.0
@@ -21,7 +23,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v1
+        uses: actions/checkout@v3
 
       - name: Install Rust ${{ env.rust_stable }}
         uses: actions-rs/toolchain@v1
