--- a/utils/networking/Cargo.toml
+++ b/utils/networking/Cargo.toml
@@ -15,8 +15,7 @@ lazy_static = "1.4"
 log = "0.4"
 regex = "1"
 
-#ya-relay-stack = { version = "0.4.1", optional = true }
-ya-relay-stack = { git = "https://github.com/golemfactory/ya-relay.git", rev = "f9371b572204365920bbe1f6cc9b3e757bf12887", optional = true }
+ya-relay-stack = { version = "0.4.1", optional = true }
 
 anyhow = { version = "1.0", optional = true }
 trust-dns-resolver = { version = "0.21", optional = true }
