--- a/core/net/Cargo.toml
+++ b/core/net/Cargo.toml
@@ -16,7 +16,9 @@ ya-core-model = { version = "^0.8", features=["net", "identity"] }
 
 # ya-relay-client = "0.4"
 # ya-relay-client = { path = "../../../ya-relay/client" }
-ya-relay-client = { git = "https://github.com/golemfactory/ya-relay.git", rev = "f1009ec013d27795a56c6493447836a851352b72" }
+# ya-relay-client = { git = "https://github.com/golemfactory/ya-relay.git", rev = "f1009ec013d27795a56c6493447836a851352b72" }
+ya-relay-client = { git = "https://github.com/golemfactory/ya-relay.git", rev = "098dba92d130035b8a3eac1132841787fcecf522" }
+
 
 ya-sb-proto = { version = "0.6" }
 ya-sb-util = { version = "0.4" }
