--- a/utils/networking/Cargo.toml
+++ b/utils/networking/Cargo.toml
@@ -15,9 +15,7 @@ lazy_static = "1.4"
 log = "0.4"
 regex = "1"
 
-#ya-relay-stack = { version = "0.4.1", optional = true }
-#ya-relay-stack = { git = "https://github.com/golemfactory/ya-relay.git", rev = "3ca135218f0ae5d62f7ac5c6afad0120f652ecec", features = ["stack-verbose"], optional = true }
-ya-relay-stack = { path = "../../../ya-relay/crates/stack", features = ["stack-verbose"], optional = true }
+ya-relay-stack = { version = "0.4.1", optional = true }
 
 anyhow = { version = "1.0", optional = true }
 trust-dns-resolver = { version = "0.21", optional = true }
