--- a/core/gsb-api/Cargo.toml
+++ b/core/gsb-api/Cargo.toml
@@ -28,7 +28,7 @@ futures = "0.3"
 base64 = "0"
 flexbuffers = "2"
 bytes = "1"
-tokio = "1"
+tokio = { version = "1", features=["macros"] }
 
 [dev-dependencies]
 ya-core-model = { version = "0.8", features = ["gftp"] }
