--- a/.github/workflows/integration-test-nightly.yml
+++ b/.github/workflows/integration-test-nightly.yml
@@ -64,7 +64,9 @@ jobs:
           poetry-version: 1.2.2
 
       - name: Install dependencies
-        run: poetry install --no-root
+        run: |
+          poetry config experimental.new-installer false
+          poetry install --no-root
 
       - name: Disconnect Docker containers from default network
         continue-on-error: true
