--- a/.github/workflows/integration-test-nightly.yml
+++ b/.github/workflows/integration-test-nightly.yml
@@ -63,6 +63,9 @@ jobs:
         with:
           poetry-version: 1.3.2
 
+      - name: Poetry conf
+        run: poetry config experimental.new-installer false
+
       - name: Install dependencies
         run: poetry install --no-root
 
