--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -47,6 +47,8 @@ jobs:
         with:
           poetry-version: 1.3.2
           working-directory: "./goth_tests"
+      - name: Poetry conf
+        run: poetry config experimental.new-installer false
 
       - name: Install dependencies
         run: poetry install --no-root
