--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ name = "yagna"
 path = "core/serv/src/main.rs"
 
 [dependencies]
-tikv-jemallocator = "0.5.0"
+# tikv-jemallocator = "0.5.0"
 ya-activity = "0.4"
 ya-compile-time-utils = "0.2"
 ya-core-model = { version = "^0.8" }
