--- a/agent/provider/Cargo.toml
+++ b/agent/provider/Cargo.toml
@@ -26,10 +26,10 @@ ya-utils-process = { version = "0.2", features = ['lock'] }
 ya-std-utils = "0.1"
 golem-certificate = { git = "https://github.com/golemfactory/golem-certificate", rev = "71cb9a5c76a3e741b26ace018da9fe482ccdc268" }
 
-#ya-negotiators = { git = "https://github.com/nieznanysprawiciel/ya-negotiator", rev = "ffdcc00420aca699b2864ef37a94f722c22555dd" }
-#ya-agreement-utils = { git = 'https://github.com/nieznanysprawiciel/ya-negotiator', rev = "ffdcc00420aca699b2864ef37a94f722c22555dd" }
-ya-negotiators = { path = "../../../../experiments/ya-negotiators" }
-ya-agreement-utils = { path = "../../../../experiments/ya-negotiators/agreement-utils" }
+ya-negotiators = { git = "https://github.com/nieznanysprawiciel/ya-negotiator", rev = "b8ceb3a3396e3ea9ff3fa9245c55984331ebc57e" }
+ya-agreement-utils = { git = 'https://github.com/nieznanysprawiciel/ya-negotiator', rev = "b8ceb3a3396e3ea9ff3fa9245c55984331ebc57e" }
+#ya-negotiators = { path = "../../../../experiments/ya-negotiators" }
+#ya-agreement-utils = { path = "../../../../experiments/ya-negotiators/agreement-utils" }
 
 
 actix = { version = "0.13", default-features = false }
