--- a/utils/manifest-utils/Cargo.toml
+++ b/utils/manifest-utils/Cargo.toml
@@ -23,7 +23,7 @@ schema = ["schemars"]
 ya-agreement-utils = "0.4.1"
 ya-utils-path = "0.1"
 ya-client-model = "0.5"
-golem-certificate = { git = "https://github.com/golemfactory/golem-certificate", rev = "71cb9a5c76a3e741b26ace018da9fe482ccdc268" }
+golem-certificate = { git = "https://github.com/golemfactory/golem-certificate", rev = "a8eb02b80c8fd77daaf92ba27600564d4ff55fef" }
 
 regex = "1.5"
 serde = "1.0"
@@ -57,3 +57,4 @@ shlex = "1.1"
 tar = "0.4"
 test-case = "2.2"
 ya-manifest-test-utils = "0.1"
+openssl = { version = "0.10", features = ["vendored"] }
