--- a/goth_tests/.gitignore
+++ b/goth_tests/.gitignore
@@ -2,3 +2,6 @@
 .pytest_cache
 __pycache__
 /assets
+e2e/vm/assets/test_e2e_rule_partner_outbound/golem-certificate
+e2e/vm/assets/test_e2e_rule_partner_outbound/partner-certificate.signed.json
+e2e/vm/assets/test_e2e_rule_partner_outbound/partner-keypair.key
