Forward Rulestore files to negotiators

--- a/agent/provider/Cargo.toml
+++ b/agent/provider/Cargo.toml
@@ -26,10 +26,10 @@ ya-utils-process = { version = "0.2", features = ['lock'] }
 ya-std-utils = "0.1"
 golem-certificate = { git = "https://github.com/golemfactory/golem-certificate", rev = "71cb9a5c76a3e741b26ace018da9fe482ccdc268" }
 
-ya-negotiators = { git = "https://github.com/nieznanysprawiciel/ya-negotiator", rev = "77e0598a2c0d2148466970469ccc66f8820044c5" }
-ya-agreement-utils = { git = 'https://github.com/nieznanysprawiciel/ya-negotiator', rev = "77e0598a2c0d2148466970469ccc66f8820044c5" }
-#ya-negotiators = { path = "../../../../experiments/ya-negotiators" }
-#ya-agreement-utils = { path = "../../../../experiments/ya-negotiators/agreement-utils" }
+#ya-negotiators = { git = "https://github.com/nieznanysprawiciel/ya-negotiator", rev = "77e0598a2c0d2148466970469ccc66f8820044c5" }
+#ya-agreement-utils = { git = 'https://github.com/nieznanysprawiciel/ya-negotiator', rev = "77e0598a2c0d2148466970469ccc66f8820044c5" }
+ya-negotiators = { path = "../../../../experiments/ya-negotiators" }
+ya-agreement-utils = { path = "../../../../experiments/ya-negotiators/agreement-utils" }
 
 
 actix = { version = "0.13", default-features = false }
