--- a/core/payment-driver/dummy/Cargo.toml
+++ b/core/payment-driver/dummy/Cargo.toml
@@ -13,7 +13,7 @@ ya-client-model = { version = "0.5" }
 ya-payment-driver = "0.3"
 ya-persistence = "0.3"
 ya-service-api-interfaces = "0.2"
-ya-service-bus = "0.6.1"
+ya-service-bus = { workspace = true }
 
 anyhow = "1.0"
 bigdecimal = "0.2"
