--- a/exe-unit/Cargo.toml
+++ b/exe-unit/Cargo.toml
@@ -35,7 +35,7 @@ ya-client-model = "0.5"
 ya-compile-time-utils = "0.2"
 ya-core-model = { version = "^0.8", features = ["activity", "appkey"] }
 ya-runtime-api = { version = "0.6", path = "runtime-api", features = ["server"] }
-ya-service-bus = "0.6.1"
+ya-service-bus = { workspace = true }
 ya-transfer = "0.3"
 ya-utils-path = "0.1"
 ya-std-utils = "0.1"
@@ -80,7 +80,7 @@ yansi = "0.5.0"
 
 [dev-dependencies]
 ya-runtime-api = { version = "0.6", path = "runtime-api", features = ["codec", "server"] }
-ya-sb-router = "0.6.1"
+ya-sb-router = { workspace = true }
 
 actix-files = "0.6"
 actix-web = "4"
