--- a/utils/transfer/Cargo.toml
+++ b/utils/transfer/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 [dependencies]
 ya-client-model = "0.5"
 ya-core-model = { version = "^0.8" }
-ya-service-bus = "0.6.1"
+ya-service-bus = { workspace = true }
 ya-utils-path = "0.1"
 gftp = { version = "^0.3" }
 
