--- a/core/vpn/Cargo.toml
+++ b/core/vpn/Cargo.toml
@@ -38,7 +38,10 @@ tokio-stream = "0.1.6"
 uuid = { version = "0.8", features = ["v4"] }
 
 [features]
-trace-forward-packets = []
+# Add log for outgoing and incoming packets for VPN RAW
+# It includes transport bypassing smalltcp stack
+trace-raw-packets = []
+# Trace for VPN packets
 packet-trace-enable = ["ya-packet-trace/enable"]
 default = []
 
