Goth config docker-compose name revert

--- a/goth_tests/goth-config.yml
+++ b/goth_tests/goth-config.yml
@@ -5,7 +5,7 @@
 
 docker-compose:
   # Path to compose file to be used, relative to `docker-dir`
-  compose-file: "docker-compose-hybrid-net.yml"
+  compose-file: "docker-compose.yml"
   docker-dir: "assets/docker/"
 
   build-environment:
