--- a/goth_tests/goth-config.yml
+++ b/goth_tests/goth-config.yml
@@ -46,8 +46,11 @@ node-types:
         destination: "/root/.local/share/ya-provider/exe-unit/cache/tmp"
       - read-write: "assets/provider/cert-dir"
         destination: "/root/.local/share/ya-provider/cert-dir"
+      - read-write: "assets/provider/rules.json"
+        destination: "/root/.local/share/ya-provider/rules.json"
     privileged-mode: True
 
+# test_e2e_rule_partner_outbound overrides this property
 nodes:
   - name: "requestor"
     type: "Requestor"
