--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -26,7 +26,7 @@ jobs:
 
   integration-test:
     name: Integration Tests
-    runs-on: [goth, ubuntu-18.04]
+    runs-on: [goth, ubuntu-22.04]
     needs: test_check
     defaults:
       run:
@@ -39,15 +39,14 @@ jobs:
           ref: ${{ github.event.pull_request.head.sha || github.sha }}
 
       - name: Configure Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
-          python-version: "3.8.0"
+          python-version: "3.10.11"
 
       - name: Configure Poetry
-        uses: Gr1N/setup-poetry@v7
+        uses: Gr1N/setup-poetry@v8
         with:
-          poetry-version: 1.2.2
-          working-directory: "./goth_tests"
+          poetry-version: 1.4.2
 
       - name: Install dependencies
         run: |
@@ -104,7 +103,4 @@ jobs:
       # Only relevant for self-hosted runners
       - name: Remove Poetry virtual env
         if: always()
-        # Python version below should agree with the version set up by this job.
-        # In the future we'll be able to use the `--all` flag here to remove envs for
-        # all Python versions (https://github.com/python-poetry/poetry/issues/3208).
-        run: poetry env remove python3.8
+        run: poetry env remove --all
