--- a/utils/networking/Cargo.toml
+++ b/utils/networking/Cargo.toml
@@ -15,7 +15,7 @@ lazy_static = "1.4"
 log = "0.4"
 regex = "1"
 
-ya-relay-stack = { version = "0.4.1", optional = true }
+ya-relay-client = { git = "https://github.com/golemfactory/ya-relay.git", rev = "dc1b599620b62be0a152a6390039fb7e5bb983de", optional = true }
 
 anyhow = { version = "1.0", optional = true }
 trust-dns-resolver = { version = "0.21", optional = true }
