--- a/core/gftp/Cargo.toml
+++ b/core/gftp/Cargo.toml
@@ -37,6 +37,8 @@ structopt = "0.3.9"
 thiserror = "1.0.20"
 tokio = { version = "1", features = ["io-std", "time"] }
 url = { version = "2.1.1", features = ["serde"] }
+fastrand = "1.4.0"
+humansize = "2.1.3"
 
 [dev-dependencies]
 dotenv = { version = "0.15.0" }
