--- a/Cargo.toml
+++ b/Cargo.toml
@@ -77,7 +77,7 @@ futures = "0.3"
 lazy_static = "1.4"
 log = "0.4"
 metrics = "0.12"
-openssl = { version ="0.10", features = ["vendored"] }
+openssl = "0.10"
 openssl-probe = { version = "0.1", optional = true }
 serde = "1.0"
 serde_json = "1.0"
