--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,8 @@ path = "core/serv/src/main.rs"
 # diesel 1.4.* supports up to 0.23.0, but sqlx 0.5.9 requires 0.22.0
 # sqlx 0.5.10 need 0.23.2, so 0.5.9 is last version possible
 libsqlite3-sys = { version = "=0.22.2", features = ["bundled"] }
-erc20_payment_lib = { path = "../../scx1332/rust_erc20_payment/crates/erc20_payment_lib" }
+#erc20_payment_lib = { path = "../../scx1332/rust_erc20_payment/crates/erc20_payment_lib" }
+erc20_payment_lib = { version = "=0.1.7" }
 
 [dependencies]
 ya-activity = "0.4"
