Working on experimental driver integration

--- a/core/payment-driver/erc20next/config-payments.toml
+++ b/core/payment-driver/erc20next/config-payments.toml
@@ -45,7 +45,7 @@ max-fee-per-gas = 500.0
 gas-left-warning-limit = 1000000
 transaction-timeout = 100
 token = { address = "0x2036807B0B3aaf5b1858EE822D0e111fDdac7018", symbol = "tGLM" }
-multi-contract = { address = "0x800010D7d0d315DCA795110ecCf0127cBd76b89f", max-at-once = 10 }
+# multi-contract = { address = "0x800010D7d0d315DCA795110ecCf0127cBd76b89f", max-at-once = 10 }
 confirmation-blocks = 1
 block-explorer-url = "https://mumbai.polygonscan.com"
 
