--- a/.github/workflows/integration-test-central-net.yml
+++ b/.github/workflows/integration-test-central-net.yml
@@ -1,4 +1,4 @@
-name: Goth integration tests (hybrid-net)
+name: Goth integration tests (central-net)
 
 on:
   push:
@@ -20,7 +20,7 @@ jobs:
         id: wait-for-build-ubu
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          checkName: "Build binaries (x86-64) hybrid-net (ubuntu-latest)"
+          checkName: "Build binaries (x86-64) central-net (ubuntu-latest)"
           ref: ${{ github.event.pull_request.head.sha || github.sha }}
           intervalSeconds: 60
           timeoutSeconds: 7200
@@ -29,7 +29,7 @@ jobs:
         run: echo job status= ${{ steps.wait-for-build-ubu.outputs.conclusion }} && ${{ fromJSON('["false", "true"]')[steps.wait-for-build-ubu.outputs.conclusion == 'success'] }}
 
   integration-test:
-    name: Integration Tests (hybrid-net)
+    name: Integration Tests (central-net)
     runs-on: [goth, ubuntu-18.04]
     needs: test_check
     defaults:
@@ -80,10 +80,10 @@ jobs:
       - name: Download artifact
         uses: dawidd6/action-download-artifact@v2
         with:
-          workflow: binaries-x86-64-hybrid-net.yml
+          workflow: binaries-x86-64-central-net.yml
           commit: ${{github.event.pull_request.head.sha || github.sha}}
           workflow_conclusion: success
-          name: "Yagna Linux hybrid-net"
+          name: "Yagna Linux central-net"
           path: /tmp/yagna-build
 
       - name: Run test suite
@@ -91,7 +91,7 @@ jobs:
           GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           poetry run poe goth-assets
-          poetry run poe goth-tests --config-override docker-compose.build-environment.binary-path=/tmp/yagna-build --config-override docker-compose.compose-file=docker-compose-hybrid-net.yml
+          poetry run poe goth-tests --config-override docker-compose.build-environment.binary-path=/tmp/yagna-build
 
       - name: Upload test logs
         uses: actions/upload-artifact@v2
