Update of local setup default properties

--- a/.env-template
+++ b/.env-template
@@ -98,10 +98,10 @@ NODE_NAME=__YOUR_NODE_NAME_GOES_HERE__
 # Yagna service REST API application key token.
 YAGNA_APPKEY=__GENERATED_APP_KEY__
 
-# Choose NET type to use. Central NET is used by default, but will be removed
-# in future version to use more decentralized solutions.
-#YA_NET_TYPE=hybrid
-YA_NET_TYPE=central
+# Choose NET type to use. Hybrid network is used by default. 
+# Central network will be removed in future releases.
+#YA_NET_TYPE=central
+YA_NET_TYPE=hybrid
 
 ## Central Net configuration.
 #CENTRAL_NET_HOST=3.249.139.167:7464
