--- a/.github/workflows/system-test.yml
+++ b/.github/workflows/system-test.yml
@@ -31,6 +31,12 @@ jobs:
           toolchain: ${{ env.rust_stable }}
           components: rustfmt, clippy
 
+      - name: Setup cache
+        uses: Swatinem/rust-cache@v2
+        with:
+          save-if: ${{ github.ref == 'refs/heads/master' }}
+
+
       - name: Check lockfile
         uses: actions-rs/cargo@v1
         with:
