--- a/goth_tests/pyproject.toml
+++ b/goth_tests/pyproject.toml
@@ -22,7 +22,7 @@ pytest = "^6.2"
 pytest-asyncio = "^0.20.2"
 pytest-rerunfailures = "^10.3"
 pytest-split = "^0.8.1"
-goth = "^0.15.0"
+# goth = "^0.15.0"
 # to use development goth version uncomment below
 goth =  { git = "https://github.com/golemfactory/goth.git", rev = "b3a08bb281b38c64224e69cefd9d822cce0770da" }
 
