--- a/core/payment-driver/erc20/Cargo.toml
+++ b/core/payment-driver/erc20/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 
 [features]
 default = []
+integration = []
 
 [dependencies]
 async-trait = "0.1"
@@ -33,7 +34,9 @@ tiny-keccak = { version = "2.0", features = ["keccak"] }
 tokio = { version = "1", features = ["full"] }
 uuid = { version = "0.8", features = ["v4"] }
 web3 = { version = "0.16", default-features = false, features = [ "http-tls", "signing", "ws-tls-tokio" ] }
-
+rand = { workspace = true }
+url = { workspace=true }
+trust-dns-resolver = { workspace=true, default-features = false }
 ## yagna dependencies
 ya-payment-driver = "0.3"
 ya-client-model = "0.5"
@@ -46,3 +49,4 @@ actix-rt = "2.7"
 dotenv = "0.15.0"
 env_logger = "0.7.1"
 structopt = "0.3"
+test-case = "3.1.0"
