--- a/utils/networking/Cargo.toml
+++ b/utils/networking/Cargo.toml
@@ -18,8 +18,8 @@ regex = "1"
 ya-relay-stack = { version = "0.5.0", optional = true }
 
 anyhow = { version = "1.0", optional = true }
-trust-dns-resolver = { version = "0.21", optional = true }
-url = { version = "2.2", optional = true }
+trust-dns-resolver = { workspace=true, optional = true }
+url = { workspace=true, optional = true }
 
 ipnet = { version = "2.3", optional = true }
 thiserror = { version = "1.0", optional = true }
