Document env template for GETH addresses

--- a/.env-template
+++ b/.env-template
@@ -34,9 +34,15 @@ YAGNA_DATADIR="."
 #ACCOUNT_LIST="${YAGNA_DATADIR}/accounts.json"
 #PAYMENT_SHUTDOWN_TIMEOUT_SECS=10
 
-## All drivers
-#RINKEBY_GETH_ADDR=http://1.geth.testnet.golem.network:55555
+### All drivers
+
+## Set list of Ethereum nodes used by payment driver for specified networks.
+## By default payment driver will query nodes addresses from DNS record `{network_name}.rpc-node.dev.golem.network`.
+## Setting any of these variables will disable DNS lookup mechanism and use custom list of nodes instead for chosen network.
 #MAINNET_GETH_ADDR=https://geth.golem.network:55555
+#GOERLI_GETH_ADDR=https://rpc.ankr.com/eth_goerli
+#POLYGON_GETH_ADDR=https://bor.golem.network,https://polygon-rpc.com
+#MUMBAI_GETH_ADDR=https://matic-mumbai.chainstacklabs.com
 
 ## ERC20 driver.
 #ETH_FAUCET_ADDRESS=http://faucet.testnet.golem.network:4000/donate
