--- a/Cargo.toml
+++ b/Cargo.toml
@@ -167,7 +167,8 @@ assets = [
         "644",
     ],
 ]
-
+[workspace.dependencies]
+libsqlite3-sys = { version = "0.22.0", features = ["bundled"] }
 
 [workspace]
 members = [
@@ -290,6 +291,8 @@ ya-framework-macro = { path = "test-utils/test-framework/framework-macro" }
 ethereum-tx-sign = { git = "https://github.com/mfranciszkiewicz/ethereum-tx-sign.git", rev = "1164c74187a9e2947faeaea7dde104c3cdec4195" }
 graphene-sgx = { git = " https://github.com/golemfactory/graphene-rust.git", rev = "dbd993ebad7f9190410ea390a589348479af6407" }
 web3 = { git = "https://github.com/golemfactory/rust-web3", branch = "update_ethabi" }
+
+diesel = { git = "https://github.com/golemfactory/yagna-diesel-patch.git", rev = "a512c66d520a9066dd9a4d1416f9109019b39563"}
 
 # Speed up builds on macOS (will be default in next rust version probably)
 # https://jakedeichert.com/blog/reducing-rust-incremental-compilation-times-on-macos-by-70-percent/
