--- a/core/payment-driver/base/Cargo.toml
+++ b/core/payment-driver/base/Cargo.toml
@@ -15,7 +15,7 @@ bigdecimal = { version = "0.2" }
 chrono = { version = "0.4", features = ["serde"] }
 diesel = { version = "1.4", features = ["sqlite", "r2d2", "chrono"] }
 diesel_migrations = "1.4"
-ethereum-types = "0.12.1"
+ethereum-types = "0.14.1"
 ethsign = "0.8"
 futures = "0.3"
 hex = "0.4"
@@ -30,7 +30,11 @@ tokio = { version = "1", features = ["macros"] }
 
 ## yagna dependencies
 ya-client-model = "0.5"
-ya-core-model = { version = "^0.9", features = ["driver", "identity", "payment"] }
+ya-core-model = { version = "^0.9", features = [
+    "driver",
+    "identity",
+    "payment",
+] }
 ya-persistence = "0.3"
 ya-service-bus = "0.6.1"
 
