--- a/core/payment-driver/erc20next/Cargo.toml
+++ b/core/payment-driver/erc20next/Cargo.toml
@@ -12,6 +12,7 @@ async-trait = "0.1"
 anyhow = "1.0"
 awc = { version = "3", features = ["openssl"] }
 bigdecimal = { version = "0.2" }
+ethsign = "0.8"
 chrono = { version = "0.4", features = ["serde"] }
 derive_more = "0.99"
 ethabi = "18.0"
